<resources>
    <string name="app_name">Jabulela</string>
    <string name="jabulela">Jabulela</string>
    <string name="username">USERNAME</string>
    <string name="sign_in">SIGN IN</string>
    <string name="dawn">Dawn</string>
    <string name="passworrd">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_upp">Sign Up</string>
    <string name="sign_inn">SIGN IN</string>
    <string name="user_name">Username</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="email_address">Email Address</string>
    <string name="passwoord">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_instead">Login Instead</string>
    <string name="location">Location</string>
    <string name="emaiiil">Email</string>
    <string name="yes">You are logged in</string>
    <string name="no">\"You are not logged in \"</string>
    <string name="riziki_hope">Riziki Hope</string>
    <string name="hope_riziki">hope</string>
    <string name="hope">Hope</string>
    <string name="sound">Sound</string>
    <string name="indie">Indie</string>
    <string name="full_namme">Full Name</string>
    <string name="fulll_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="fullll_name">Full Name</string>
    <string name="full_nameee">Full Name</string>
    <string name="emailL">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password2">Password</string>
    <string name="update">Update</string>
    <string name="todo">TODO</string>
</resources>