<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".Login">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="297dp"
        android:layout_height="193dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/dawn"
        android:src="@drawable/ic_undraw_before_dawn_re_hp4m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="319dp"
        android:layout_height="197dp"
        android:layout_marginBottom="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_il"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textAlignment="center">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/snow"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textAlignment="center"
                android:textColorHint="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_il"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:background="@color/snow"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textAlignment="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#00000000"
            android:gravity="end"
            android:text="@string/forgot_password" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#00000000"
        android:backgroundTint="@color/snow"
        android:text="@string/sign_up"
        android:textColor="@color/nude"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="367dp"
        android:layout_height="37dp"
        android:layout_marginTop="32dp"
        android:background="@color/snow"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />





</androidx.constraintlayout.widget.ConstraintLayout>

