<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="267dp"
        android:background="@drawable/gradient_bg"
        android:padding="20dp">

        <ImageView
            android:id="@+id/img_young"
            android:layout_width="93dp"
            android:layout_height="86dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="13dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_undraw_young_and_happy_hfpe" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_toEndOf="@id/img_young"
            android:fontFamily="sans-serif-black"
            android:includeFontPadding="false"
            android:text="@string/riziki_hope"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_toEndOf="@id/img_young"
            android:includeFontPadding="false"
            android:text="@string/hope"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="171dp"
        android:layout_marginTop="-100dp"
        android:padding="10dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/nude"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_baseline_music_note_24" />

                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:includeFontPadding="false"
                    android:text="@string/sound"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_desc"
                    android:layout_centerHorizontal="true"
                    android:includeFontPadding="false"
                    android:text="@string/indie"
                    android:textColor="#3E2723"
                    android:textSize="14sp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/nude"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_baseline_cloud_queue_24" />

                <TextView
                    android:id="@+id/tv_mood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:includeFontPadding="false"
                    android:text="@string/sound"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_mood_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_mood"
                    android:layout_centerHorizontal="true"
                    android:includeFontPadding="false"
                    android:text="@string/indie"
                    android:textColor="#3E2723"
                    android:textSize="14sp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/lavenderblush">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_name"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="285dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:backgroundTint="@color/pink"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"
                android:hint="@string/full_nameee"
                android:inputType="textPersonName"
                android:shadowColor="@color/gray">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/lavenderblush">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_email2"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email2"
                android:layout_width="285dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:backgroundTint="@color/pink"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:shadowColor="@color/gray"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck,TouchTargetSizeCheck">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/lavenderblush">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_phone"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone"
                android:layout_width="285dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:backgroundTint="@color/pink"
                android:drawableStart="@drawable/ic_baseline_local_phone_24"
                android:drawablePadding="10dp"
                android:hint="@string/phone_number"
                android:shadowColor="@color/gray"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck,TouchTargetSizeCheck">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/lavenderblush">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_password2"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password2"
                android:layout_width="285dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/pink"
                android:drawablePadding="10dp"
                android:hint="@string/password2"
                android:inputType="textPassword"
                android:shadowColor="@color/gray"
                tools:ignore="TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck,TouchTargetSizeCheck">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="285dp"
        android:layout_height="41dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="@color/pink"
        android:text="@string/update"
        android:textColor="#795548"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />


</LinearLayout>
